src/index.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

img {
    max-width: 100%;
}

ul {
    list-style: none;
}

strong {
    margin-right: 0.5rem;
}

header {
    background-color: black;
    z-index: 10000;
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1.5rem;

    .logo img {
        width: 200px;
    }

    input[type="search"] {
        width: 250px;
    }
}

main {
    position: relative;
    background-color: gray;
    z-index: 1000;
    min-height: 100vh;

    .album {
        position: relative;
        width: fit-content;
    }

    .bordered-img,
    .noImage {
        height: 500px;
        width: 350px;
    }

    .bordered-img,
    .layover,
    .noImage {
        border: 2px solid white;
    }

    .layover {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background-color: black;
        opacity: 0;
    }

    .img-content {
        position: absolute;
        top: 5%;
        left: 5%;
        right: 5%;
        overflow: auto;
        color: white;
        display: none;
    }

    .album:hover .img-content {
        display: block;
    }

    .album:hover .layover {
        opacity: 1;
    }
}

.star-rating {
    color: #FFD700;
}

.noImage {
    background-color: black;
    color: white;
    position: relative;

    p {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
    }
}

.noImage:hover {
    p {
        display: none;
        color: black;
    }
}

